--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
     "expo": "~51.0.4",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
