--- a/Client/package.json
+++ b/Client/package.json
@@ -16,37 +16,47 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.1",
+    "@hookform/resolvers": "^3.4.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
-    "expo": "~51.0.4",
+    "expo": "~51.0.8",
+    "expo-checkbox": "^3.0.0",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
-    "expo-router": "^3.5.12",
+    "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "joi": "^17.13.1",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.4",
     "react-native": "0.74.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-root-siblings": "^4.1.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.3.0",
+    "react-native-svg": "^15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.10.2",
-    "react-native-youtube-iframe": "^2.3.0"
+    "react-native-webview": "^13.8.6",
+    "react-native-youtube-iframe": "^2.3.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -56,7 +66,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~51.0.2",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
